Fix some bugs in fonts

--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -1,13 +1,9 @@
----
----
+@charset "UTF-8";
+
 html {
-	font-family: {
-		"Gill Sans", "Gill Sans MT", Calibri, "PingFang HK", "蘋方-港", "PingFang TC", "蘋方-繁", "PingFang SC", "蘋方-簡", "PingFang", "Microsoft YaHei New", "Microsoft Yahei", "微软雅黑", SimSun, 宋体, STXihei, "华文细黑", sans-serif;
-	}
+	font-family: "Gill Sans", "Gill Sans MT", Calibri, "PingFang HK", "蘋方-港", "PingFang TC", "蘋方-繁", "PingFang SC", "蘋方-簡", "PingFang", "Microsoft YaHei New", "Microsoft Yahei", "微软雅黑", SimSun, 宋体, STXihei, "华文细黑", sans-serif;
 }
 
-code{
-    font-family: {
-		Consolas, "Liberation Mono", Menlo, Courier, monospace;
-	}
+code {
+    font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
 }
