--- a/fonts-lmodern/fonts-lmodern.scss
+++ b/fonts-lmodern/fonts-lmodern.scss
@@ -1,5 +1,7 @@
 ---
 ---
+@charset "UTF-8";
+
 @font-face {
     font-family: 'lmroman';
     src: url('lmroman10-bold-webfont.eot');
@@ -81,13 +83,9 @@
 }
 
 html {
-	font-family: {
-		lmroman, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, STFangSong, "华文仿宋", FangSong, "仿宋", serif;
-	}
+	font-family: lmroman, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, STFangSong, "华文仿宋", FangSong, "仿宋", serif;
 }
 
 code{
-    font-family: {
-		lmmono, Consolas, "Liberation Mono", Menlo, Courier, "PingFang HK", "蘋方-港", "PingFang TC", "蘋方-繁", "PingFang SC", "蘋方-簡", "PingFang", "Microsoft YaHei New", "Microsoft Yahei", "微软雅黑", SimSun, 宋体, STXihei, "华文细黑", monospace;
-	}
+    font-family: lmmono, Consolas, "Liberation Mono", Menlo, Courier, "PingFang HK", "蘋方-港", "PingFang TC", "蘋方-繁", "PingFang SC", "蘋方-簡", "PingFang", "Microsoft YaHei New", "Microsoft Yahei", "微软雅黑", SimSun, 宋体, STXihei, "华文细黑", monospace;
 }
