--- a/_sass/_system-fonts-sourcecodepro.scss
+++ b/_sass/_system-fonts-sourcecodepro.scss
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-html {
+body {
 	font-family: 'Source Code Pro', Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, STFangSong, "华文仿宋", FangSong, "仿宋", serif;
 }
 
