--- a/css-source/system-fonts/_system-fonts-charter.scss
+++ b/css-source/system-fonts/_system-fonts-charter.scss
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-html {
+body {
 	font-family: Charter, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, STFangSong, "华文仿宋", FangSong, "仿宋", serif;
 }
 
