fix a bug that the heading css counter and the amsthm css counter both used body
amsthm now use html instead

--- a/_sass/_amsthm.scss
+++ b/_sass/_amsthm.scss
@@ -1,6 +1,6 @@
 /* CSS counter */
 
-body {
+html {
     counter-reset: theorem lemma proposition definition conjecture example postulate problem case;
 }
 
