--- a/css-source/amsthm/_amsthm.scss
+++ b/css-source/amsthm/_amsthm.scss
@@ -1,6 +1,6 @@
 /* CSS counter */
 
-body {
+html {
     counter-reset: theorem lemma proposition definition conjecture example postulate problem case;
 }
 
