change comment style to avoid problems

--- a/_sass/_table.scss
+++ b/_sass/_table.scss
@@ -5,7 +5,7 @@ td {
     padding: 5px;
 }
 
-// From MultiMarkdown Composer 3
+/* From MultiMarkdown Composer 3 */
 table {
     border: solid black;
     border-width: 2px 0px;
