add _img.scss: prevent overflow; retina images

--- a/css/gitit-print.scss
+++ b/css/gitit-print.scss
@@ -6,6 +6,7 @@
 @import "mmdc-print";
 @import "list";
 @import "table";
+@import "img";
 @import "toc-id";
 @import "heading-wikipage";
 @import "amsthm";
