--- a/css/markdown-latex-post-content.scss
+++ b/css/markdown-latex-post-content.scss
@@ -6,6 +6,7 @@
 @import "mmdc";
 @import "list";
 @import "table";
+@import "img";
 @import "toc";
 @import "heading-post-content";
 @import "amsthm";
