--- a/css/gitit.scss
+++ b/css/gitit.scss
@@ -6,6 +6,7 @@
 @import "mmdc";
 @import "list";
 @import "table";
+@import "img";
 @import "toc-id";
 @import "heading-wikipage";
 @import "amsthm";
